crates/mecojoni-core/tests/fixtures/valid/minimal.meco
---
meco: 1
module: hello
entry: greeting
exports: [greeting]
---

# greeting
- Hello, world!
